fix: insurance-product-carousel GAP and text-block margin

--- a/blocks/insurance-product-carousel/insurance-product-carousel.css
+++ b/blocks/insurance-product-carousel/insurance-product-carousel.css
@@ -1,8 +1,18 @@
+.section {
+    &.text-block-container {
+        &.insurance-product-carousel-container {
+            & .text-block-wrapper {
+                margin: 0 !important;
+            }
+        }
+    }
+}
+
 .insurance-product-carousel-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: var(--Carousel-Widget-Gap-D-Tl, 3rem);
+    gap: var(--Carousel-Widget-Gap-D-Ds, 3rem);
 
     &.swiper {
         overflow: visible;
@@ -32,6 +42,7 @@
 @media (768px <= width < 1200px) {
     .insurance-product-carousel-container {
         margin-inline: auto;
+        gap: var(--Carousel-Widget-Gap-M-Tp, 2.5rem);
 
         &.swiper {
             overflow: visible;
@@ -73,6 +84,8 @@
 /* Mobile */
 @media (width < 768px) {
     .insurance-product-carousel-container {
+        gap: var(--Carousel-Widget-Gap-M-Tp, 2.5rem);
+
         & .insurance-product-carousel {
             display: flex;
             flex-direction: column;
